tests/com.e1c.dt.check.form.itests/workspace/InvalidItemIdCheck/src/Configuration/HomePageWorkArea.hpwa
<?xml version="1.0" encoding="UTF-8"?>
<hpwa:HomePageWorkArea xmlns:hpwa="http://g5.1c.ru/v8/dt/hpwa">
  <workingAreaTemplate>TwoColumnsEqualWidth</workingAreaTemplate>
  <columns>
    <items>
      <form>Catalog.Catalog.Form.Id0ImmediateChild</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
    <items>
      <form>Catalog.Catalog.Form.Id0NestedChild</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
    <items>
      <form>Catalog.Catalog.Form.NegativeId</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
    <items>
      <form>Catalog.Catalog.Form.MissingId</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
    <items>
      <form>Catalog.Catalog.Form.MissingIdMultiple</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
    <items>
      <form>Catalog.Catalog.Form.DefaultListForm</form>
      <height>10</height>
      <visibility>
        <common>true</common>
      </visibility>
    </items>
  </columns>
  <columns/>
</hpwa:HomePageWorkArea>
